--- a/Jotog Manager/Alpagua Manager.csproj
+++ b/Jotog Manager/Alpagua Manager.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F16AD25B-88E0-4321-9F7D-D0361523D88F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Jotog_Manager</RootNamespace>
-    <AssemblyName>Jotog Manager</AssemblyName>
+    <RootNamespace>Alpagua_Manager</RootNamespace>
+    <AssemblyName>Alpagua Manager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -117,6 +117,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
