--- a/Alpagua Manager/Alpagua Manager.csproj
+++ b/Alpagua Manager/Alpagua Manager.csproj
@@ -37,6 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -58,6 +59,10 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>alpagua-icon-ConvertImage.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
@@ -93,6 +98,12 @@
     <Compile Include="EsthonForm.Designer.cs">
       <DependentUpon>EsthonForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GarryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GarryForm.Designer.cs">
+      <DependentUpon>GarryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HearthLuriaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,11 +130,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="BienvenueForm.resx">
       <DependentUpon>BienvenueForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EsthonForm.resx">
       <DependentUpon>EsthonForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GarryForm.resx">
+      <DependentUpon>GarryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HearthLuriaForm.resx">
       <DependentUpon>HearthLuriaForm.cs</DependentUpon>
@@ -139,19 +154,19 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -178,6 +193,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="alpagua-icon-ConvertImage.ico" />
+    <None Include="Resources\GarryLogo.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
