Ajout du logo Luria dans les ressources

--- a/Alpagua Manager/Alpagua Manager.csproj
+++ b/Alpagua Manager/Alpagua Manager.csproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="alpagua-icon-ConvertImage.ico" />
+    <None Include="Resources\logo-luria.png" />
     <None Include="Resources\alpagua-icon.ico" />
     <None Include="Resources\GarryLogo.png" />
   </ItemGroup>
